[gd_scene load_steps=49 format=2]

[ext_resource path="res://Art/satelite-9-357010.png" type="Texture" id=1]
[ext_resource path="res://Actors/Satellite.gd" type="Script" id=2]
[ext_resource path="res://Art/explosion-sprite-sheet.png" type="Texture" id=3]
[ext_resource path="res://Actors/Debris1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Art/bar.png" type="Texture" id=5]
[ext_resource path="res://Art/back.png" type="Texture" id=6]
[ext_resource path="res://Art/border.png" type="Texture" id=7]
[ext_resource path="res://Art/spot.png" type="Texture" id=8]
[ext_resource path="res://Actors/Debris2.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sound/explosion.wav" type="AudioStream" id=10]
[ext_resource path="res://Sound/rocket.wav" type="AudioStream" id=11]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.13249
height = 5.75006

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 100, 96 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 100, 0, 100, 96 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 200, 0, 100, 96 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 300, 0, 100, 96 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 400, 0, 100, 96 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 500, 0, 100, 96 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 100, 96 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 100, 96, 100, 96 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 200, 96, 100, 96 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 300, 96, 100, 96 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 400, 96, 100, 96 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 500, 96, 100, 96 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 192, 100, 96 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 100, 192, 100, 96 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 200, 192, 100, 96 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 300, 192, 100, 96 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 400, 192, 100, 96 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 500, 192, 100, 96 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 288, 100, 96 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 100, 288, 100, 96 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 200, 288, 100, 96 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 300, 288, 100, 96 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 400, 288, 100, 96 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 500, 288, 100, 96 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 384, 100, 96 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 100, 384, 100, 96 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 200, 384, 100, 96 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 300, 384, 100, 96 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 400, 384, 100, 96 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 500, 384, 100, 96 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 480, 100, 96 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 100, 480, 100, 96 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 200, 480, 100, 96 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 300, 480, 100, 96 )

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="CapsuleShape2D" id=37]
radius = 6.47234
height = 4.89936

[node name="Sat" type="KinematicBody2D"]
position = Vector2( 0, -0.104673 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )
debris1 = ExtResource( 4 )
debris2 = ExtResource( 9 )

[node name="Highlight" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.231373 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -0.78399
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -0.0030514
shape = SubResource( 1 )

[node name="Explosion" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 36 )
frame = 2

[node name="Collision Detector" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 62

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision Detector"]
shape = SubResource( 37 )

[node name="Planet Detector" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Planet Detector"]
shape = SubResource( 37 )

[node name="Kill Timer" type="Timer" parent="."]
wait_time = 1.6

[node name="Button" type="Button" parent="."]
margin_left = -6.38343
margin_top = -9.70509
margin_right = 5.61657
margin_bottom = 10.2949
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="TextureProgress" parent="."]
margin_left = -16.4143
margin_top = 10.2905
margin_right = 183.586
margin_bottom = 60.2905
rect_rotation = -90.0492
rect_scale = Vector2( 0.108929, 0.108929 )
value = 100.0
texture_under = ExtResource( 6 )
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExplosionPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -12.993

[node name="RocketPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.345
[connection signal="destroyed" from="." to="." method="_on_Sat_destroyed"]
[connection signal="area_entered" from="Collision Detector" to="." method="_on_Collision_Detector_area_entered"]
[connection signal="body_entered" from="Planet Detector" to="." method="_on_Planet_Detector_body_entered"]
[connection signal="timeout" from="Kill Timer" to="." method="_on_Kill_Timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
